Feat: Implement Get by ID
