# controllers/book.go
@@ -4,7 +4,9 @@ import (
 	"database/sql"
 	"encoding/json"
 	"net/http"
+	"strconv"
 
+	"github.com/gorilla/mux"
 	"github.com/omigarrett/byfood-takehome/backend/models"
 )
 
@@ -25,6 +27,40 @@ func GetBooksController(db *sql.DB) http.HandlerFunc {
 
 		w.Header().Set("Content-Type", "application/json")
 		if err := json.NewEncoder(w).Encode(books); err != nil {
+			http.Error(w, "Error encoding JSON response", http.StatusInternalServerError)
+		}
+	}
+}
+
+// GetBookByIDController handles the request for fetching a book by its ID
+// @Summary Get book by ID
+// @Description Get a book by its ID from the database
+// @Tags books
+// @Produce json
+// @Param id path int true "Book ID"
+// @Success 200 {object} models.Book
+// @Router /books/{id} [get]
+func GetBookByIDController(db *sql.DB) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		vars := mux.Vars(r)
+		id, err := strconv.Atoi(vars["id"])
+		if err != nil {
+			http.Error(w, "Invalid book ID", http.StatusBadRequest)
+			return
+		}
+
+		book, err := models.GetBooksByID(db, id)
+		if err != nil {
+			http.Error(w, "Error fetching book from database", http.StatusInternalServerError)
+			return
+		}
+		if book == nil {
+			http.Error(w, "Book not found", http.StatusNotFound)
+			return
+		}
+
+		w.Header().Set("Content-Type", "application/json")
+		if err := json.NewEncoder(w).Encode(book); err != nil {
 			http.Error(w, "Error encoding JSON response", http.StatusInternalServerError)
 		}
 	}
